TST-1054 Design tweaks for earned incentives Added link to mobile nav Fixed z-index of star overlapping header dropdowns Styled incentives page for mobile

--- a/assets/scss/_tasteful-theme.scss
+++ b/assets/scss/_tasteful-theme.scss
@@ -428,9 +428,18 @@ a {
     border: solid 1px black;
     border-radius: 10px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 10px;
     padding: 10px;
+    @media only screen and (max-width: 800px) {
+        justify-content: center;
+        .incetinve-item-title, .incetinve-item-date, .incentive-item-add {
+            flex-basis: 100%;
+            justify-content: center;
+            text-align: center;
+        }
+    }
 }
 .incetinve-item-title, .incetinve-item-date {
     display: block;
@@ -443,8 +452,10 @@ a {
 .incentive-item-add button {
     margin-bottom: 0px !important;
 }
-.incetinve-item-title, .incetinve-item-date, .incentive-item-add {
-    flex-basis: 33%;
+@media only screen and (min-width:801px) {
+  .incetinve-item-title, .incetinve-item-date, .incentive-item-add {
+      flex-basis: 33%;
+  }
 }
 
 .razoyo-sticker {
@@ -452,6 +463,9 @@ a {
     float: left;
     position: relative;
     z-index: zIndex("lower");
+    &.incentives {
+      z-index: 1;
+    }
     svg {
         fill: #ffc107;
         height: 50px;
